infra/k8s/eks-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skin-lesion-dev
  labels:
    app: skin-lesion-backend
    environment: dev
    platform: eks
