infra/k8s/eks-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skin-lesion-backend
  namespace: skin-lesion-dev
  labels:
    app: skin-lesion-backend
    environment: dev
    platform: eks
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skin-lesion-backend
                port:
                  number: 8080
